System call 2 works now

--- a/tsos.css
+++ b/tsos.css
@@ -35,8 +35,8 @@ h3 {
 }
 
 #display {
-  background-color:#DFDBC3;
-  border: 2px solid red;
+  background-color:#000000;
+  border: 2px solid white;
   cursor: default;
 }
 
